Changelog
=========

6.1 - (2024-12-10)
---------------------------
* Fix: large query on context navigation when on layout or add new item.
  We return no results when we have the `Additional files` variation set
  since it has potential to have a very large number of items.
  [ichim-david - refs #280463]

6.0 - (2024-12-05)
---------------------------
* Change: Fix plone.app.vocabularies.Users to work with Creators and Contributors Field
  [avoinea - refs #274362]
* Fix: Context Navigation title becoming undefined on Edit when deleting a manually added title
  [ichim-david - refs #280463]

5.8 - (2024-11-26)
---------------------------
* Feature: added getObjSize info for File portal_type used to get file size information
  [ichim-david - refs #280463]
* Bug fix: fixed title of the initial navigation item when `side_title_nav` isn't set 
  [ichim-david - refs #280463]

5.7 - (2024-11-24)
---------------------------
* Change: Improve svg upgrade step to know which svgs are fixed and not revisit them
  [avoinea]

5.6 - (2024-11-11)
---------------------------
* Feature: customized actions endpoint to allow passing of props to the
  actions endpoint
  [ichim-david - refs #271001]
* Feature: customized breadcrumbs endpoint to add portal_type info to the
  items served by the breadcrumbs endpoint
  [ichim-david - refs #271001]

5.5 - (2024-10-18)
---------------------------
* Change: Fix broken brain error at the upgrade svg step - refs #276995
  [avoinea]

5.4 - (2024-10-09)
---------------------------
* Fix: Create a content upgrade script to fix SVGs display 
  [@dobri1408 - refs #276995]

5.3 - (2024-08-23)
---------------------------
* Change: Develop
  [tiberiuichim]

5.2 - (2024-08-19)
---------------------------
* Feature: Check for permissions when serializing restricted blocks
  [razvanMiu - refs #273963]
* Feature: Customized context navigation endpoint to filter portal_type
  [ichim-david - refs #270999]