@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <metadata>
-  <version>5.4</version>
+  <version>6.1</version>
   <dependencies>
     <dependency>profile-plone.volto:default</dependency>
   </dependencies>
