@@ -74,4 +74,16 @@
 
   </genericsetup:upgradeSteps>
 
+ <genericsetup:upgradeSteps
+    source="5.4"
+    destination="6.1"
+    profile="eea.volto.policy:default">
+
+    <genericsetup:upgradeDepends
+       title="Import all steps from eea.volto.policy multilingual profile"
+       import_profile="eea.volto.policy:multilingual"
+      />
+
+  </genericsetup:upgradeSteps>
+
 </configure>
