@@ -7,6 +7,8 @@ Changelog
   We return no results when we have the `Additional files` variation set
   since it has potential to have a very large number of items.
   [ichim-david - refs #280463]
+* Feature: Add `Language` querystring field in order to be able to filter by language in Search block
+  [avoinea - refs #281503]
 
 6.0 - (2024-12-05)
 ---------------------------
